Fixed the display on smaller devices.

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -1,5 +1,6 @@
 $theme-colors: (
     "primary": #b56181,
+    "support": #fc9cb9,
     "complement": #85a34e,
     "secondary": #664757,
     "darker": #453942,
@@ -8,8 +9,17 @@ $theme-colors: (
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 
+html {
+    height: 100vh;
+}
+
+.text-support {
+    color: map-get($theme-colors, support);
+}
+
 body {
     background: map-get($theme-colors, darker);
+    position: relative;
     color: white;
     font-family: 'Roboto', sans-serif;
 }
@@ -66,7 +76,7 @@ body, html {
 }
 
 .viewport-fit {
-    height: calc(100vh - 56px);   
+    height: 100vh; 
 }
 
 #message-form {
@@ -91,3 +101,41 @@ body, html {
 #right, #left {
     transition: transform .5s;
 }
+
+.flex-1 {
+    flex: 1;
+}
+
+@media (max-width: 575.98px) { 
+    .w-xs-100 {
+        width: 100% !important;
+    }
+
+    .h-xs-60 {
+        height: 60% !important;
+    }
+    
+    .h-xs-40 {
+        height: 40% !important;
+    }
+
+    .flex-xs-1 {
+        flex: 1 !important;
+    }
+
+    .m-xs-0 {
+        margin: 0 !important;
+    }
+
+    .p-xs-0 {
+        padding: 0 !important;
+    }
+
+    .mb-xs-3 {
+        margin-bottom: 1rem !important;
+    }
+
+    .justify-content-xs-start {
+        justify-content: flex-start !important;
+    }
+ }
